force-app/main/default/objects/Vacancy__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Candidate proposed for this vacancy by recruiter (Only candidates with &quot;Validated by HR&quot; status)</description>
    <label>Candidate</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Validated candidates only available</errorMessage>
        <filterItems>
            <field>Candidate__c.Status__c</field>
            <operation>equals</operation>
            <value>Validated by HR</value>
        </filterItems>
        <infoMessage>Validated candidates only</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Vacancies</relationshipLabel>
    <relationshipName>Vacancies</relationshipName>
    <type>Lookup</type>
</CustomField>