force-app/main/default/objects/Vacancy__c/fields/DaysLeftToClose__c.field-meta.xml
<CustomField>
    <fullName>DaysLeftToClose__c</fullName>
    <description>Indicates how many days is left to StartDate</description>
    <formula>StartDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysLeftToClose</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>