force-app/main/default/objects/Vacancy__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recruiter who accepted this vacancy and is responsible for search (Only Recruiter role can be assigned)</description>
    <label>Responsible</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Recruiters only</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Recruiter</value>
        </filterItems>
        <infoMessage>Recruiters only</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Vacancies</relationshipName>
    <type>Lookup</type>
</CustomField>