force-app/main/default/objects/Vacancy__c/listViews/Vacancies.listView-meta.xml
<ListView>
    <fullName>Vacancies</fullName>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Level__c</columns>
    <columns>Responsible__c</columns>
    <filterScope>Everything</filterScope>
    <label>Vacancies</label>
</ListView>